Clean up  Kgram